# gpt-summarizer-rs

./: .gitignore  Cargo.toml  README.md  env.example
src/: config.rs  error.rs  extractive_summary.rs  lib.rs  main.rs
