[package]
name = "summarize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./src/main.rs"
name = "summarize"

[dependencies]
chatgpt_rs = { version = "1.2.3", features = ["streams"] }
clap = { version = "4.4.6", features = ["derive"] }
config = "0.13.3"
dotenv = "0.15.0"
futures-util = "0.3.28"
html5ever = "0.26.0"
itertools = "0.11.0"
md5 = "0.7.0"
ndarray = "0.15.6"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
rust-stemmers = "1.2.0"
scraper = "0.17.1"
selectors = "0.25.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
stop-words = "0.7.2"
tokio = { version = "1.32.0", features = ["macros", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
unicode-segmentation = "1.10.1"
url = { version = "2.4.1", features = ["serde"] }
vecmath = "1.0.0"
